--- a/MathLib/MathLib.vcxproj.filters
+++ b/MathLib/MathLib.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="vec3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="flops.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Test.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="vec3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="flops.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
