--- a/MathLib/MathLib.vcxproj
+++ b/MathLib/MathLib.vcxproj
@@ -110,11 +110,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="flops.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="vec2.cpp" />
     <ClCompile Include="vec3.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="flops.h" />
     <ClInclude Include="Test.h" />
     <ClInclude Include="vec2.h" />
     <ClInclude Include="vec3.h" />
