--- a/Components/Components.vcxproj
+++ b/Components/Components.vcxproj
@@ -120,11 +120,13 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Rigidbody.cpp" />
+    <ClCompile Include="SpaceshipController.cpp" />
     <ClCompile Include="SpaceshipLocomotion.cpp" />
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Rigidbody.h" />
+    <ClInclude Include="SpaceshipController.h" />
     <ClInclude Include="SpaceshipLocomotion.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
