--- a/Components/Components.vcxproj
+++ b/Components/Components.vcxproj
@@ -77,7 +77,7 @@
       <AdditionalIncludeDirectories>C:\Users\ginger.farrar\Documents\Visual Studio 2015\Projects\MathLib\MathLib;$(SolutionDir)MathLib\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\Users\ginger.farrar\Documents\Visual Studio 2015\Projects\MathLib\MathLib;$(SolutionDir)MathLib\;$(SolutionDir)$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\ginger.farrar\Documents\Visual Studio 2015\Projects\MathLib\MathLib;$(SolutionDir)MathLib\;$(SolutionDir)$(Configuration);$(SolutionDir)dep\sfw\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>MathLib.lib;sfw.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -100,7 +100,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\Users\ginger.farrar\Documents\Visual Studio 2015\Projects\MathLib\MathLib;$(SolutionDir)MathLib\;$(SolutionDir)$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\ginger.farrar\Documents\Visual Studio 2015\Projects\MathLib\MathLib;$(SolutionDir)MathLib\;$(SolutionDir)$(Configuration);$(SolutionDir)dep\sfw\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>MathLib.lib;sfw.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
