--- a/MathLib/MathLib.vcxproj.filters
+++ b/MathLib/MathLib.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="flops.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mat2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Test.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="flops.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="mat2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
