--- a/Components/Components.vcxproj.filters
+++ b/Components/Components.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="SpaceshipRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="shapedraw.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Transform.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SpaceshipRenderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="shapedraw.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
